# near-http-fetch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-contracts.yml  docker-publish.yml
examples/weather/: Cargo.toml
examples/weather/src/: lib.rs
relayer/: .dockerignore  Cargo.toml  Dockerfile  README.md
relayer/src/: lib.rs  main.rs
src/: lib.rs
tests/: fetcher.rs  weather.rs
