[workspace]
members = [".", "relayer", "examples/weather"]

[package]
name = "http-fetch"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"
# TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.
# Link to the repository will be available via `contract_source_metadata` view-function.
repository = "https://github.com/r-near/near-http-fetch"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
borsh = "1.5"
near-sdk = "5.16"

[dev-dependencies]
anyhow = "1"
base64 = "0.22"
near-api = { git = "https://github.com/near/near-api-rs", package = "near-api", default-features = false }
near-sdk = { version = "5.16", features = ["unit-testing"] }
near-sandbox = "0.2"
near-workspaces = { version = "0.21", features = ["unstable"] }
relayer = { path = "relayer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.12.0", features = ["full"] }
url = "2"
[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
